--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 html lang="en"
-    head
-        meta charset="UTF-8"/
-        meta name="viewport" content="width=device-width, initial-scale=1.0"/
-        title Document
-        link rel="stylesheet" href="/css/style.css"/
-    body 
-        
+  head
+    meta charset="UTF-8"/
+    meta name="viewport" content="width=device-width, initial-scale=1.0"/
+    meta http-equiv="X-UA-Compatible" content="ie=edge"/
+    link rel="stylesheet" href="/css/style.css"/
+    title Document
+  body
+    img src="img/love.png" alt="musik listener"/
+
+    nav
+      a href="/" Start it
+      a href="/gymlog" Visa gymlog
+      a href="/gymlog/new" Ny gymlog
+    ==yield
+  
