--- a/views/layout.slim
+++ b/views/layout.slim
@@ -7,11 +7,11 @@ html lang="en"
     link rel="stylesheet" href="/css/style.css"/
     title Document
   body
-    img src="img/love.png" alt="musik listener"/
+    
 
     nav
       a href="/" Start it
       a href="/gymlog" Visa gymlog
-      a href="/gymlog/new" Ny gymlog
+      a href="/type" kolla övningar
     ==yield
   
