--- a/views/gymlog/index.slim
+++ b/views/gymlog/index.slim
@@ -1,14 +1,15 @@
 h2 skapa ny log:
 a href="/gymlog/new" Ny gymlog
-
 - @result.each do |time|
 
     p Datum:
     p = time['dag'] 
     p Övning:
     p = time['exercises']
+    a href="gymlog/#{time['id']}/edit" uppdatera
     form method="POST" action="gymlog/#{time['id']}/delete"
         input type="submit" value="Delete"
+   
 
 
 
