--- a/views/exercises/new.slim
+++ b/views/exercises/new.slim
@@ -2,7 +2,7 @@ form action="/exercises/new" method="post"
   label for="exercises" Namn:
   input type="text" name="exercises" id="exercises"
   label for="type_id" Muskelgrupp:
-  select name="type_id" id="type_id"
+  select name="type-id" id="type-id"
     - @result.each do |muscle_group|
       option value="#{muscle_group['id']}" = muscle_group['exercises']
-  input type="submit" value="Lägg till övning"
+    input type="submit" value="Lägg till övning"
