--- a/views/login_layout.slim
+++ b/views/login_layout.slim
@@ -3,15 +3,11 @@ html lang="en"
   head
     meta charset="UTF-8"/
     meta name="viewport" content="width=device-width, initial-scale=1.0"/
-    meta http-equiv="X-UA-Compatible" content="ie=edge"/
     link rel="stylesheet" href="/css/style.css"/
     title Document
   body
-    
-
     nav
-      a href="/start_inlogg" Start it
-      a href="/gymlog" Visa gymlog
-      a href="/type" kolla övningar
-    ==yield
-  
+      a href="/" Register
+      a href="/showlogin" Login
+
+    == yield
