--- a/views/start.slim
+++ b/views/start.slim
@@ -1,1 +1,6 @@
 h2 Välkommen till gym sida!
+form action="users/new" method="post"
+    input type="text" name="username" placeholder="enter username"
+    input type="password" name="password" placeholder="enter password"
+    input type="password" name="password_confirm" placeholder="enter password Again"
+    input type="submit" value="regstrera ny användare"
