--- a/views/login.slim
+++ b/views/login.slim
@@ -4,5 +4,5 @@ form action="login" method="POST"
     input type="text" name="username" placeholder="enter username"
     input type="password" name="password" placeholder="enter password"
     input type="submit" value="Logga in tack"
-form action="/start_inlogg" method="get"
+form action="/guest_log" method="get"
   input type="submit" value="Fortsätt som gäst"
