--- a/views/exercises/new.slim
+++ b/views/exercises/new.slim
@@ -4,5 +4,5 @@ form action="/exercises/new" method="post"
   label for="type_id" Muskelgrupp:
   select name="type-id" id="type-id"
     - @result.each do |muscle_group|
-      option value="#{muscle_group['id']}" = muscle_group['muscel-group']
-    input type="submit" value="Lägg till övning"
+      option value="#{muscle_group['id']}" = muscle_group['muscle-group']
+  input type="submit" value="Lägg till övning"
