--- a/views/type/index2.slim
+++ b/views/type/index2.slim
@@ -1,8 +1,8 @@
-
-a href="/exercises/new" Ny övning
+-if session[:role_value]==2
+    a href="/exercises/new" Ny övning
 ul 
-    - @result.each do |time|
-        li
-             a href="/index2/#{time['id']}"= time['muscle-group']
-    
+     - @result.each do |time|
+         li
+            a href="/index2/#{time['id']}"= time['muscle-group']
+
    
