--- a/views/layout.slim
+++ b/views/layout.slim
@@ -13,5 +13,7 @@ html lang="en"
         a href="/start_inlogg" Start it
         a href="/gymlog" Visa gymlog
         a href="/type" kolla övningar
+        a href="/workout_users" Användare som tränat
+
     ==yield
   
