--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,6 +11,7 @@ html lang="en"
 
     nav
         a href="/start_inlogg" Start it
+        a href="/" Logga ut
         a href="/gymlog" Visa gymlog
         a href="/type" kolla övningar
         a href="/workout_users" Användare som tränat
