--- a/views/exercises/new.slim
+++ b/views/exercises/new.slim
@@ -1,4 +1,4 @@
-form action="/exercises/new" method="post"
+form action="/exercises" method="post"
   label for="exercises" Namn:
   input type="text" name="exercises" id="exercises"
   label for="type_id" Muskelgrupp:
