--- a/views/gymlog/new.slim
+++ b/views/gymlog/new.slim
@@ -1,4 +1,4 @@
-form action="/gymlog/new" method="post"
+form action="/gymlog" method="post"
     input type="text" name="dag" placeholder="Vilket datum"
     input type="text" name="exercises" placeholder="Vilken muskelgrupp tränade du"
         input type="submit" value="Skapa log"
